--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,6 @@ Geany 1.24 (unreleased)
     * Add experimental support for GTK3.
     * Add support for loading CTags and Vi tags files.
     * Save configuration when plugin manager dialog is closed.
-    * Regenerate 16x16 Geany icon to be not cutoff.
 
     Bug fixes
     * Fix many small memory leaks (many of them found by Pavel Roschin).
@@ -51,6 +50,8 @@ Geany 1.24 (unreleased)
     * Add Clojure filetype (PR#92, Hoàng Minh Thắng).
     * Many improvements to the PHP tag parser.
     * Update PHP global tags file (PR#137, John Long).
+    * Improve shebang detection for mksh and tcsh shells
+      (PR#126 , Ypnose).
     * Fix Asciidoc parser recognition of open block as underline.
     * Fix symbol list entry for Asciidoc headers containing a dot.
     * Fix Asciidoc title parsing.
@@ -62,14 +63,17 @@ Geany 1.24 (unreleased)
     * Fix parsing JavaScript files with a shebang.
     * Parse Java annotations with parameters (#924, Braden Walters).
     * Display Java enums in the symbol list.
+    * Add "strictfp" Java keyword and fix annotation parsing (#936, #924).
     * Fix parsing of C++ static_assert.
     * Fix parsing of typed enums in C# and C++.
     * Mitigate parsing errors on C++ generics containing an expression.
-    * Fix parsing of Frotran "forall" blocks and procedure pointers
+    * Add C++ member pointer operator to scope autocomplete operators
+      (#907).
+    * Fix parsing of Fortran "forall" blocks and procedure pointers
       (Alexander Eberspächer).
     * Fix parsing of complex Cython types.
     * Fix re-parsing Objective-C code.
-    * Fix parsing of Verliog initializers.
+    * Fix parsing of Verilog initializers.
     * Fix displaying of quoted Bash HereDoc delimiters (#952).
     * Add some HTML5 keywords (Duncan de Wet).
     * Add Erlang snippets and a template (PR#157, Fabio Ticconi).
@@ -81,12 +85,11 @@ Geany 1.24 (unreleased)
     * Many improvements to the Fortran tag parser (#1023, #1030, with
       help from Adam Hirst).
     * Put Makefile comments at start of line.
-    * Add some missing Pascal keywords (#1033).
+    * Add some missing Pascal keywords (#1033, PR#144).
     * Add default build command for Bibtex in the Latex filetype
       (PR#227, Francisco Iacobelli).
     * Ignore Python imports when going to a tag's definition.
-    * Ass some more Ruby extensions (Igor Shaula).
-    * Fix 'Go to Tag definition' for parsed Python imports.
+    * Add some more Ruby extensions (Igor Shaula).
 
     Internationalization
     * Make date templates translatable (Christian Dywan).
@@ -109,7 +112,8 @@ Geany 1.24 (unreleased)
     * Fix spawning commands with spaces (#943).
     * Allow to use the GTK color chooser dialog (PR#218, Steven Valsesia).
     * Add default extension to native save dialogs (#1021).
-    * Add colorschemes from the Geany-Themes to the Windows installer.
+    * Add colorschemes from the Geany-Themes project to the
+      Windows  installer.
     * Add option to install Geany header files and pkgconfig file to the
       Windows installer.
     * Fix broken opening files from command line on Windows
