--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Geany 1.23\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-30 20:46+0200\n"
-"PO-Revision-Date: 2011-09-18 13:27+1000\n"
-"Last-Translator: Jeff Bailes <thepizzaking@gmail.com>\n"
+"PO-Revision-Date: 2014-05-05 05:31+0200\n"
+"Last-Translator: Colomban Wendling <ban@herbesfolles.org>\n"
 "Language-Team: British English <geany-i18n@uvena.de>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -281,9 +281,8 @@ msgstr ""
 "fields and the VTE."
 
 #: ../data/geany.glade.h:53
-#, fuzzy
 msgid "Use Windows native dialogs"
-msgstr "Use Windows File Open/Save dialogues"
+msgstr "Use Windows native dialogues"
 
 #: ../data/geany.glade.h:54
 #, fuzzy
@@ -291,8 +290,8 @@ msgid ""
 "Defines whether to use the Windows native dialogs or whether to use the GTK "
 "default dialogs"
 msgstr ""
-"Defines whether to use the native Windows File Open/Save dialogues or "
-"whether to use the GTK default dialogues"
+"Defines whether to use the native Windows dialogues or whether to use "
+"the GTK default dialogues"
 
 #: ../data/geany.glade.h:55
 msgid "<b>Miscellaneous</b>"
@@ -424,9 +423,8 @@ msgid "Bottom"
 msgstr "Bottom"
 
 #: ../data/geany.glade.h:81
-#, fuzzy
 msgid "<b>Message window</b>"
-msgstr "Message window:"
+msgstr "<b>Message window</b>"
 
 #: ../data/geany.glade.h:82
 msgid "Symbol list:"
@@ -519,7 +517,7 @@ msgstr "Calls the View->Toggle All Additional Widgets command"
 #: ../data/geany.glade.h:102
 #, fuzzy
 msgid "Switch to last used document after closing a tab"
-msgstr "Switch to last used document"
+msgstr "Switch to last used document after closing a tab"
 
 #: ../data/geany.glade.h:103
 msgid "<b>Editor tabs</b>"
@@ -1457,7 +1455,7 @@ msgstr "Sets the font for the terminal widget"
 #: ../data/geany.glade.h:303
 #, fuzzy
 msgid "Choose Terminal Font"
-msgstr "Terminal font:"
+msgstr "Choose Terminal Font"
 
 #: ../data/geany.glade.h:304
 msgid "Foreground color:"
@@ -1470,7 +1468,7 @@ msgstr "Background colour:"
 #: ../data/geany.glade.h:306
 #, fuzzy
 msgid "Background image:"
-msgstr "Background"
+msgstr "Background image:"
 
 #: ../data/geany.glade.h:307
 msgid "Scrollback lines:"
@@ -1485,14 +1483,13 @@ msgid "Sets the foreground color of the text in the terminal widget"
 msgstr "Sets the foreground colour of the text in the terminal widget"
 
 #: ../data/geany.glade.h:310
-#, fuzzy
 msgid "Sets the background color of the text in the terminal widget"
 msgstr "Sets the background colour of the text in the terminal widget"
 
 #: ../data/geany.glade.h:311
 #, fuzzy
 msgid "Sets the path to the background image in the terminal widget"
-msgstr "Sets the background colour of the text in the terminal widget"
+msgstr "Sets the path to the background image in the terminal widget"
 
 #: ../data/geany.glade.h:312
 msgid ""
@@ -1595,9 +1592,8 @@ msgstr ""
 "status of the executed program"
 
 #: ../data/geany.glade.h:330
-#, fuzzy
 msgid "<b>Terminal</b>"
-msgstr "<b>Permissions:</b>"
+msgstr "<b>Terminal</b>"
 
 #: ../data/geany.glade.h:331 ../src/prefs.c:1630 ../src/vte.c:298
 msgid "Terminal"
@@ -1679,43 +1675,36 @@ msgid "Size:"
 msgstr ""
 
 #: ../data/geany.glade.h:348
-#, fuzzy
 msgid "Location:"
-msgstr "<b>Location:</b>"
+msgstr "Location:"
 
 #: ../data/geany.glade.h:349
-#, fuzzy
 msgid "Read-only:"
-msgstr ", read-only"
+msgstr "Read-only:"
 
 #: ../data/geany.glade.h:350
-#, fuzzy
 msgid "Encoding:"
-msgstr "E_ncoding:"
+msgstr "Encoding:"
 
 #: ../data/geany.glade.h:351
-#, fuzzy
 msgid "Modified:"
-msgstr "<b>Modified:</b>"
+msgstr "Modified:"
 
 #: ../data/geany.glade.h:352
-#, fuzzy
 msgid "Changed:"
-msgstr "C_hange"
+msgstr "Changed:"
 
 #: ../data/geany.glade.h:353
-#, fuzzy
 msgid "Accessed:"
-msgstr "<b>Accessed:</b>"
+msgstr "Accessed:"
 
 #: ../data/geany.glade.h:354
 msgid "(only inside Geany)"
 msgstr "(only inside Geany)"
 
 #: ../data/geany.glade.h:355
-#, fuzzy
 msgid "Permissions:"
-msgstr "<b>Permissions:</b>"
+msgstr "Permissions:"
 
 #: ../data/geany.glade.h:356
 msgid "Read:"
@@ -1762,18 +1751,16 @@ msgid "New (with _Template)"
 msgstr "New (with _Template)"
 
 #: ../data/geany.glade.h:368
-#, fuzzy
 msgid "_Open..."
-msgstr "_Open"
+msgstr "_Open..."
 
 #: ../data/geany.glade.h:369
 msgid "Recent _Files"
 msgstr "Recent _Files"
 
 #: ../data/geany.glade.h:370
-#, fuzzy
 msgid "Save _As..."
-msgstr "Save as"
+msgstr "Save _As..."
 
 #: ../data/geany.glade.h:371
 msgid "Sa_ve All"
@@ -1793,9 +1780,8 @@ msgid "Page Set_up"
 msgstr "Page Set_up"
 
 #: ../data/geany.glade.h:375
-#, fuzzy
 msgid "_Print..."
-msgstr "Print"
+msgstr "_Print..."
 
 #: ../data/geany.glade.h:376 ../src/notebook.c:490
 msgid "Close Ot_her Documents"
@@ -1834,9 +1820,8 @@ msgid "Se_lect Current Paragraph"
 msgstr "Se_lect Current Paragraph"
 
 #: ../data/geany.glade.h:385
-#, fuzzy
 msgid "_Move Line(s) Up"
-msgstr "Move line(s) up"
+msgstr "_Move Line(s) Up"
 
 #: ../data/geany.glade.h:386
 msgid "M_ove Line(s) Down"
@@ -1895,9 +1880,8 @@ msgid "P_lugin Preferences"
 msgstr "P_lugin Preferences"
 
 #: ../data/geany.glade.h:400
-#, fuzzy
 msgid "_Find..."
-msgstr "Find"
+msgstr "_Find..."
 
 #: ../data/geany.glade.h:401
 msgid "Find _Next"
@@ -1908,14 +1892,12 @@ msgid "Find _Previous"
 msgstr "Find _Previous"
 
 #: ../data/geany.glade.h:403 ../src/symbols.c:2425
-#, fuzzy
 msgid "Find in F_iles..."
-msgstr "Find in F_iles"
+msgstr "Find in F_iles..."
 
 #: ../data/geany.glade.h:404
-#, fuzzy
 msgid "_Replace..."
-msgstr "_Replace"
+msgstr "_Replace..."
 
 #: ../data/geany.glade.h:405
 msgid "Next Me_ssage"
@@ -1934,9 +1916,8 @@ msgid "Go to Pre_vious Marker"
 msgstr "Go to Pre_vious Marker"
 
 #: ../data/geany.glade.h:409
-#, fuzzy
 msgid "_Go to Line..."
-msgstr "_Go to Line"
+msgstr "_Go to Line..."
 
 #: ../data/geany.glade.h:410 ../src/keybindings.c:440
 msgid "Find Next _Selection"
@@ -1959,14 +1940,12 @@ msgid "_View"
 msgstr "_View"
 
 #: ../data/geany.glade.h:415
-#, fuzzy
 msgid "Change _Font..."
-msgstr "Change _Font"
+msgstr "Change _Font..."
 
 #: ../data/geany.glade.h:416
-#, fuzzy
 msgid "Change _Color Scheme..."
-msgstr "_Colour Schemes"
+msgstr "Change _Colour Scheme..."
 
 #: ../data/geany.glade.h:417
 msgid "Show _Markers Margin"
@@ -2105,9 +2084,8 @@ msgid "Convert and Set to CR (_Mac)"
 msgstr "Convert and Set to CR (_Mac)"
 
 #: ../data/geany.glade.h:451 ../src/keybindings.c:568
-#, fuzzy
 msgid "_Clone"
-msgstr "_Close"
+msgstr "_Clone"
 
 #: ../data/geany.glade.h:452
 msgid "_Strip Trailing Spaces"
@@ -2142,9 +2120,8 @@ msgid "_Project"
 msgstr "_Project"
 
 #: ../data/geany.glade.h:460
-#, fuzzy
 msgid "_New..."
-msgstr "_New"
+msgstr "_New..."
 
 #: ../data/geany.glade.h:461
 msgid "_Recent Projects"
@@ -2188,9 +2165,8 @@ msgid "_Word Count"
 msgstr "_Word Count"
 
 #: ../data/geany.glade.h:471
-#, fuzzy
 msgid "Load Ta_gs..."
-msgstr "Load Ta_gs"
+msgstr "Load Ta_gs..."
 
 #: ../data/geany.glade.h:472
 msgid "_Help"
@@ -2201,9 +2177,8 @@ msgid "Keyboard _Shortcuts"
 msgstr "Keyboard _Shortcuts"
 
 #: ../data/geany.glade.h:474
-#, fuzzy
 msgid "Debug _Messages"
-msgstr "Debug Messages"
+msgstr "Debug _Messages"
 
 #: ../data/geany.glade.h:475
 msgid "_Website"
@@ -2218,9 +2193,8 @@ msgid "Report a _Bug..."
 msgstr ""
 
 #: ../data/geany.glade.h:478
-#, fuzzy
 msgid "_Donate..."
-msgstr "_Don't save"
+msgstr "_Donate..."
 
 #: ../data/geany.glade.h:479 ../src/sidebar.c:124
 msgid "Symbols"
@@ -2352,9 +2326,9 @@ msgid "Failed to change the working directory to \"%s\""
 msgstr "Failed to change the working directory to \"%s\""
 
 #: ../src/build.c:930
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to execute \"%s\" (start-script could not be created: %s)"
-msgstr "Failed to execute \"%s\" (start-script could not be created)"
+msgstr "Failed to execute \"%s\" (start-script could not be created: %s)"
 
 #: ../src/build.c:985
 msgid ""
@@ -2363,12 +2337,12 @@ msgstr ""
 "Could not execute the file in the VTE because it probably contains a command."
 
 #: ../src/build.c:1012
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Could not parse terminal command \"%s\" (check Terminal tool setting in "
 "Preferences)"
 msgstr ""
-"Could not find terminal \"%s\" (check path for Terminal tool setting in "
+"Could not parse terminal command \"%s\" (check Terminal tool setting in "
 "Preferences)"
 
 #: ../src/build.c:1031
@@ -2507,9 +2481,8 @@ msgstr "_Execute"
 
 #. build the code with make custom
 #: ../src/build.c:2618 ../src/build.c:2809 ../src/build.c:2863
-#, fuzzy
 msgid "Make Custom _Target..."
-msgstr "Make Custom _Target"
+msgstr "Make Custom _Target..."
 
 #. build the code with make object
 #: ../src/build.c:2620 ../src/build.c:2810 ../src/build.c:2871
@@ -2608,9 +2581,9 @@ msgid "No more message items."
 msgstr "No more message items."
 
 #: ../src/callbacks.c:1671
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open file %s (File not found)"
-msgstr "Could not open file %s (%s)"
+msgstr "Could not open file %s (File not found)"
 
 #: ../src/dialogs.c:220
 msgid "Detect from file"
@@ -2771,9 +2744,9 @@ msgid "unknown"
 msgstr "unknown"
 
 #: ../src/dialogs.c:1214
-#, fuzzy, c-format
+#, c-format
 msgid "%s Properties"
-msgstr "Properties"
+msgstr "%s Properties"
 
 #: ../src/dialogs.c:1247 ../src/ui_utils.c:285
 msgid "(with BOM)"
@@ -3134,19 +3107,18 @@ msgid "%s file"
 msgstr "%s file"
 
 #: ../src/filetypes.c:93
-#, fuzzy, c-format
+#, c-format
 msgid "%s script"
-msgstr "%s script file"
+msgstr "%s script"
 
 #: ../src/filetypes.c:94
-#, fuzzy, c-format
+#, c-format
 msgid "%s document"
-msgstr "XML document"
+msgstr "%s document"
 
 #: ../src/filetypes.c:164
-#, fuzzy
 msgid "Shell"
-msgstr "Shell:"
+msgstr "Shell"
 
 #: ../src/filetypes.c:165
 msgid "Makefile"
@@ -3158,14 +3130,12 @@ msgid "Cascading Stylesheet"
 msgstr "Cascading StyleSheet"
 
 #: ../src/filetypes.c:178
-#, fuzzy
 msgid "Config"
-msgstr "Config file"
+msgstr "Config"
 
 #: ../src/filetypes.c:179
-#, fuzzy
 msgid "Gettext translation"
-msgstr "Gettext translation file"
+msgstr "Gettext translation"
 
 #: ../src/filetypes.c:414
 msgid "_Programming Languages"
@@ -3209,23 +3179,21 @@ msgid "Could not find file '%s'."
 msgstr "Could not find file '%s'."
 
 #: ../src/highlighting.c:1304
-#, fuzzy
 msgid "Default"
-msgstr "_Default"
+msgstr "Default"
 
 #: ../src/highlighting.c:1343
 #, fuzzy
 msgid "The current filetype overrides the default style."
-msgstr "Build the current file with Make and the default target"
+msgstr "The current filetype overrides the default style."
 
 #: ../src/highlighting.c:1344
 msgid "This may cause color schemes to display incorrectly."
 msgstr ""
 
 #: ../src/highlighting.c:1365
-#, fuzzy
 msgid "Color Schemes"
-msgstr "_Colour Schemes"
+msgstr "Colour Schemes"
 
 #. visual group order
 #: ../src/keybindings.c:227 ../src/symbols.c:722
@@ -3470,9 +3438,8 @@ msgid "Send to Custom Command 3"
 msgstr "Send to Custom Command 3"
 
 #: ../src/keybindings.c:407
-#, fuzzy
 msgid "Join lines"
-msgstr "Comment line(s)"
+msgstr "Join lines"
 
 #: ../src/keybindings.c:412
 msgid "Insert date"
@@ -3555,9 +3522,8 @@ msgid "Go to End of Line"
 msgstr "Go to End of Line"
 
 #: ../src/keybindings.c:492
-#, fuzzy
 msgid "Go to Start of Display Line"
-msgstr "Go to End of Display Line"
+msgstr "Go to Start of Display Line"
 
 #: ../src/keybindings.c:494
 msgid "Go to End of Display Line"
@@ -3965,9 +3931,8 @@ msgid "Plugin"
 msgstr "Plugin"
 
 #: ../src/plugins.c:1304
-#, fuzzy
 msgid "Description"
-msgstr "Description:"
+msgstr "Description"
 
 #: ../src/plugins.c:1322
 msgid "No plugins available."
@@ -4088,9 +4053,8 @@ msgid "Print only the basename(without the path) of the printed file"
 msgstr "Print only the basename(without the path) of the printed file"
 
 #: ../src/printing.c:414
-#, fuzzy
 msgid "Paginating"
-msgstr "Printing"
+msgstr "Paginating"
 
 #: ../src/printing.c:438
 #, c-format
@@ -4192,9 +4156,9 @@ msgid "Do you want to close it before proceeding?"
 msgstr "Do you want to close it before proceeding?"
 
 #: ../src/project.c:605
-#, fuzzy, c-format
+#, c-format
 msgid "The '%s' project is open."
-msgstr "The '%s' project is already open."
+msgstr "The '%s' project is open."
 
 #: ../src/project.c:654
 msgid "The specified project name is too short."
@@ -4483,9 +4447,8 @@ msgstr ""
 "This is a fatal error and Geany will now quit."
 
 #: ../src/stash.c:1118
-#, fuzzy
 msgid "Name"
-msgstr "Name:"
+msgstr "Name"
 
 #: ../src/stash.c:1125
 msgid "Value"
@@ -4612,9 +4575,8 @@ msgid "Traits"
 msgstr ""
 
 #: ../src/symbols.c:787
-#, fuzzy
 msgid "Implementations"
-msgstr "Implements:"
+msgstr "Implementations"
 
 #: ../src/symbols.c:789 ../src/symbols.c:1033
 msgid "Typedefs / Enums"
@@ -4684,24 +4646,20 @@ msgid "Type Selectors"
 msgstr "Type Selectors"
 
 #: ../src/symbols.c:856
-#, fuzzy
 msgid "Section Level 1"
-msgstr "Section"
+msgstr "Section Level 1"
 
 #: ../src/symbols.c:857
-#, fuzzy
 msgid "Section Level 2"
-msgstr "Section"
+msgstr "Section Level 2"
 
 #: ../src/symbols.c:858
-#, fuzzy
 msgid "Section Level 3"
-msgstr "Section"
+msgstr "Section Level 3"
 
 #: ../src/symbols.c:859
-#, fuzzy
 msgid "Section Level 4"
-msgstr "Section"
+msgstr "Section Level 4"
 
 #: ../src/symbols.c:868
 msgid "Singletons"
@@ -4732,9 +4690,8 @@ msgid "Variables / Signals"
 msgstr "Variables / Signals"
 
 #: ../src/symbols.c:903
-#, fuzzy
 msgid "Processes / Blocks / Components"
-msgstr "Processes / Components"
+msgstr "Processes / Blocks / Components"
 
 #: ../src/symbols.c:911
 msgid "Events"
@@ -4757,9 +4714,8 @@ msgid "Properties"
 msgstr "Properties"
 
 #: ../src/symbols.c:975
-#, fuzzy
 msgid "Programs"
-msgstr "Program"
+msgstr "Programs"
 
 #: ../src/symbols.c:977
 #, fuzzy
@@ -4767,9 +4723,8 @@ msgid "Functions / Subroutines"
 msgstr "Functions / Procedures"
 
 #: ../src/symbols.c:980
-#, fuzzy
 msgid "Components"
-msgstr "Completions"
+msgstr "Components"
 
 #: ../src/symbols.c:981
 msgid "Blocks"
@@ -4806,7 +4761,7 @@ msgstr "Structs"
 #: ../src/symbols.c:1043
 #, fuzzy
 msgid "Extern Variables"
-msgstr "Variables"
+msgstr "Extern Variables"
 
 #: ../src/symbols.c:1803
 #, c-format
@@ -4843,9 +4798,8 @@ msgid "Load Tags"
 msgstr "Load Tags"
 
 #: ../src/symbols.c:1858
-#, fuzzy
 msgid "Geany tag files (*.*.tags)"
-msgstr "Geany tag files (*.tags)"
+msgstr "Geany tag files (*.*.tags)"
 
 #. For translators: the first wildcard is the filetype, the second the filename
 #: ../src/symbols.c:1878
@@ -5001,9 +4955,8 @@ msgid "Choose more build actions"
 msgstr "Choose more build actions"
 
 #: ../src/toolbar.c:380
-#, fuzzy
 msgid "Search Field"
-msgstr "Search failed."
+msgstr "Search Field"
 
 #: ../src/toolbar.c:390
 msgid "Goto Field"
@@ -5130,9 +5083,8 @@ msgid "H_ide Sidebar"
 msgstr "H_ide Sidebar"
 
 #: ../src/sidebar.c:720 ../plugins/filebrowser.c:630
-#, fuzzy
 msgid "_Find in Files..."
-msgstr "_Find in Files"
+msgstr "_Find in Files..."
 
 #: ../src/sidebar.c:730
 msgid "Show _Paths"
@@ -5396,19 +5348,16 @@ msgid "Create Cla_ss"
 msgstr "Create Cla_ss"
 
 #: ../plugins/classbuilder.c:1097
-#, fuzzy
 msgid "_C++ Class..."
-msgstr "_C++ Class"
+msgstr "_C++ Class..."
 
 #: ../plugins/classbuilder.c:1100
-#, fuzzy
 msgid "_GTK+ Class..."
-msgstr "_GTK+ Class"
+msgstr "_GTK+ Class..."
 
 #: ../plugins/classbuilder.c:1103
-#, fuzzy
 msgid "_PHP Class..."
-msgstr "_PHP Class"
+msgstr "_PHP Class..."
 
 #: ../plugins/htmlchars.c:40
 msgid "HTML Characters"
@@ -5486,9 +5435,8 @@ msgid "HTML (name)"
 msgstr "HTML (name)"
 
 #: ../plugins/htmlchars.c:739
-#, fuzzy
 msgid "_Insert Special HTML Characters..."
-msgstr "_Insert Special HTML Characters"
+msgstr "_Insert Special HTML Characters..."
 
 #. Add menuitem for html replacement functions
 #: ../plugins/htmlchars.c:754
@@ -5566,15 +5514,13 @@ msgstr "_Export"
 
 #. HTML
 #: ../plugins/export.c:787
-#, fuzzy
 msgid "As _HTML..."
-msgstr "As _HTML"
+msgstr "As _HTML..."
 
 #. LaTeX
 #: ../plugins/export.c:793
-#, fuzzy
 msgid "As _LaTeX..."
-msgstr "As _LaTeX"
+msgstr "As _LaTeX..."
 
 #: ../plugins/filebrowser.c:45
 msgid "File Browser"
@@ -5594,9 +5540,8 @@ msgid "Could not execute configured external command '%s' (%s)."
 msgstr "Could not execute configured external command '%s' (%s)."
 
 #: ../plugins/filebrowser.c:615
-#, fuzzy
 msgid "Open _Externally"
-msgstr "Open _externally"
+msgstr "Open _Externally"
 
 #: ../plugins/filebrowser.c:640
 msgid "Show _Hidden Files"
@@ -5806,14 +5751,12 @@ msgid "_Top and Bottom"
 msgstr "_Top and Bottom"
 
 #: ../plugins/splitwindow.c:429
-#, fuzzy
 msgid "Side by Side"
-msgstr "_Side by Side"
+msgstr "Side by Side"
 
 #: ../plugins/splitwindow.c:431
-#, fuzzy
 msgid "Top and Bottom"
-msgstr "_Top and Bottom"
+msgstr "Top and Bottom"
 
 #~ msgid "<b>Type:</b>"
 #~ msgstr "<b>Type:</b>"
