--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-30 20:46+0200\n"
 "PO-Revision-Date: 2013-03-05 10:14-0300\n"
-"Last-Translator: Adrovane Marques Kade <adrovane@gmail.com>\n"
+"Last-Translator: Marcelo Camargo <marcelocamargo@linuxmail.org>\n"
 "Language-Team: Portuguese <geany-i18n@uvena.de>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
